<resources>
	<string name="app_name">PADListener</string>
	<string name="drawer_home_title">Home</string>
	<string name="drawer_view_monster_info_title">View monster info</string>
	<string name="drawer_view_captured_data_title">View captured data</string>
	<string name="drawer_manage_ignore_list_title">Manage ignore list</string>
	<string name="drawer_filter_friends_title">Filter friends</string>
	<string name="drawer_settings_title">Settings</string>
	<string name="drawer_changelog_title">Changelog</string>
	<string name="drawer_mock_capture_title">Mock capture</string>
	<string name="drawer_about_title">About</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="menu_common_help">Help</string>
	<string name="notification_listener_title">PADListener (%1$s)</string>
	<string name="notification_listener_content">proxy : %1$s</string>
	<string name="notification_data_capture_title">PADListener capture</string>
	<string name="notification_data_capture_started">PAD data being captured ...</string>
	<string name="notification_data_capture_saving_monsters">Saving monster #%1$d</string>
	<string name="notification_data_capture_saving_friends">Saving friend [%1$d] %2$s</string>
	<string name="notification_data_capture_finished">PAD data captured for %1$s</string>
	<string name="notification_data_sync_title">PADListener sync</string>
	<string name="notification_data_sync_started">PAD data being synced ...</string>
	<string name="notification_data_sync_computing">PAD sync being computed ...</string>
	<string name="notification_data_sync_computing_calling">Calling PadHerder API</string>
	<string name="notification_data_sync_computing_parsing">Parsing PadHerder API result</string>
	<string name="notification_data_sync_computing_computing">Computing sync</string>
	<string name="notification_data_sync_computed">PAD sync is computed</string>
	<string name="notification_data_sync_pushing">PAD sync being pushed ...</string>
	<string name="notification_data_sync_push_finished">Finished, %1$d pushed</string>
	<string name="toast_data_capture_finished">PAD data captured for %1$s</string>
	<string name="help_button_next">Next</string>
	<string name="help_button_close">Close</string>
	<string name="label_settings">Settings</string>
	<string name="settings_listener_page">Listener</string>
	<string name="settings_listener_category">Listener</string>
	<string name="settings_listener_target_servers_title">Target servers</string>
	<string name="settings_listener_target_servers_summary">Servers for PAD calls.</string>
	<string name="settings_listener_custom_target_hostname_title">Custom target hostname</string>
	<string name="settings_listener_custom_target_hostname_summary">Custom hostname added to the list of intercepted hostname for PAD calls.</string>
	<string name="settings_proxy_mode_title">Proxy settings mode</string>
	<string name="settings_proxy_mode_summary">%1$s</string>
	<string name="settings_listener_auto_shutdown_title">Auto shutdown</string>
	<string name="settings_listener_auto_shutdown_summary">Automatically shuts down the Listener when the capture is done. Only used for automatic listener modes</string>
	<string name="settings_listener_on_local_title">Non local mode</string>
	<string name="settings_listener_on_local_summary">Enable to make the listener accessible from other devices connected to the same network (ex : to capture from another Android device, won\'t work with iOS)</string>
	<string name="settings_padherder_page">PadHerder</string>
	<string name="settings_padherder_account_number_title">Number of accounts</string>
	<string name="settings_padherder_account_number_summary">How many PADherder accounts you want to be able to use at the same time</string>
	<string name="settings_padherder_account_category">Account %1$d</string>
	<string name="settings_padherder_name_title">PAD Name</string>
	<string name="settings_padherder_name_summary">PAD account name to automatically match the captured data</string>
	<string name="settings_padherder_login_title">Login</string>
	<string name="settings_padherder_login_summary" />
	<string name="settings_padherder_password_title">Password</string>
	<string name="settings_padherder_password_summary" />
	<string name="settings_sync_page">Sync</string>
	<string name="settings_sync_category">Sync</string>
	<string name="settings_sync_material_in_monster_title">Sync materials as monsters ?</string>
	<string name="settings_sync_material_in_monster_summary">You can choose to sync materials in your monsters\' list. This can be useful for some materials (like KoR) that you may use in your teams. \n\n%1$s</string>
	<string name="settings_sync_deduct_monster_in_material_title">Deduct materials ?</string>
	<string name="settings_sync_deduct_monster_in_material_summary">If you sync materials in your monsters\' list, should they still be counted in your materials ? \nFor example, if you have 4 KoR with 1 used in your monsters, do you want to have 3 or 4 KoR available in your materials ?</string>
	<string name="settings_sync_default_monster_create_priority_title">Default monster created priority</string>
	<string name="settings_sync_default_monster_create_priority_summary">%1$s</string>
	<string name="settings_sync_preselect_category">Preselections</string>
	<string name="settings_choose_sync_preselect_updated_user_info_title">Updated user info</string>
	<string name="settings_choose_sync_preselect_updated_user_info_summary" />
	<string name="settings_choose_sync_preselect_updated_materials_title">Updated materials</string>
	<string name="settings_choose_sync_preselect_updated_materials_summary" />
	<string name="settings_choose_sync_preselect_updated_monsters_title">Updated monsters</string>
	<string name="settings_choose_sync_preselect_updated_monsters_summary" />
	<string name="settings_choose_sync_preselect_created_monsters_title">Created monsters</string>
	<string name="settings_choose_sync_preselect_created_monsters_summary" />
	<string name="settings_choose_sync_preselect_deleted_monsters_title">Deleted monsters</string>
	<string name="settings_choose_sync_preselect_deleted_monsters_summary" />
	<string name="settings_sync_group_category">Group</string>
	<string name="settings_choose_sync_group_monsters_updated_title">Updated monsters</string>
	<string name="settings_choose_sync_group_monsters_updated_summary" />
	<string name="settings_choose_sync_group_monsters_created_title">Created monsters</string>
	<string name="settings_choose_sync_group_monsters_created_summary" />
	<string name="settings_choose_sync_group_monsters_deleted_title">Deleted monsters</string>
	<string name="settings_choose_sync_group_monsters_deleted_summary" />
	<string name="settings_sync_use_ignore_category">Use ignore list</string>
	<string name="settings_choose_sync_use_ignore_monsters_updated_title">Updated monsters</string>
	<string name="settings_choose_sync_use_ignore_monsters_updated_summary" />
	<string name="settings_choose_sync_use_ignore_monsters_created_title">Created monsters</string>
	<string name="settings_choose_sync_use_ignore_monsters_created_summary" />
	<string name="settings_choose_sync_use_ignore_monsters_deleted_title">Deleted monsters</string>
	<string name="settings_choose_sync_use_ignore_monsters_deleted_summary" />
	<string name="proxy_mode_manual">Manual</string>
	<string name="proxy_mode_auto_wifi">AutoWifi</string>
	<string name="proxy_mode_auto_iptables">AutoIptables</string>
	<string name="monster_priority_high">High</string>
	<string name="monster_priority_med">Medium</string>
	<string name="monster_priority_low">Low</string>
	<string name="monster_priority_zero">Zero</string>
	<string name="about_dialog_title">About PADListener v%1$s</string>
    <string name="about_dialog_message">PADListener v%1$s, available under GNU GPL v2 license
\n\nThis app\'s sources are available on GitHub (https://github.com/Neraud/PADListener).
\n\nBuilt using SandroProxyLib (http://code.google.com/p/sandrop/).
\n\nData courtesy of PAD Wiki (http://pad.wikia.com/wiki) and PADherder (https://www.padherder.com).
\n\nThanks to GungHo for this great game and to Freddie for PADherder.
</string>
	<string name="about_dialog_button">OK</string>
	<string name="label_home">PADListener</string>
	<string name="home_help_welcome_title">Welcome !</string>
	<string name="home_help_welcome_content">Welcome to PADListener !
\n\nThese help pages are automatically displayed the first time you access a new screen of the app.
	</string>
	<string name="home_help_help_title">Help</string>
	<string name="home_help_help_content">The help pages are different for each screen.
\n\nYou can show them again by using the icon in the top action bar.
	</string>
	<string name="home_help_main_title">Main functions</string>
	<string name="home_help_main_content">You can access the main functions from this home screen :
\n\n - capturing data from your PAD game(s)
\n\n - syncing the captured data with your PADherder account(s)
	</string>
	<string name="home_help_capture_title">Capture</string>
	<string name="home_help_capture_content">You can capture data from PAD.
\n\nThis will save your monster box and your friends.
\n\nManual sync will require you to follow a few steps.
\nOnce set up, the Auto mode will speed the process.
	</string>
	<string name="home_help_capture_manual_title">Manual capture</string>
	<string name="home_help_capture_manual_content">With the manual mode, you\'ll start a capture Listener.
\nYou\'ll then have to start PAD and go through the title screen to capture data.</string>
	<string name="home_help_capture_auto_title">Auto capture</string>
	<string name="view_captured_info_item_name"><b>%1$s</b> (updated at %2$s)</string>
	<string name="view_captured_info_item_rank">Rank %1$d (%2$d xp)</string>
	<string name="view_captured_info_item_maxrank">%1$d stam, %2$d cost</string>
	<string name="view_captured_info_item_maxstats">%1$d max box, %2$d max friends</string>
	<string name="view_captured_info_item_currency">%1$d coins, %2$d stones</string>
	<string name="view_captured_monster_detail_level_label">Level :</string>
	<string name="view_captured_monster_detail_pluses_label">Pluses :</string>
	<string name="view_captured_monster_detail_pluses_value">+%1$d +%2$d +%3$d</string>
	<string name="view_captured_monster_detail_awakenings_label">Awa. :</string>
	<string name="view_captured_monster_detail_awakenings_value">%1$d</string>
	<string name="view_captured_monster_detail_skill_level_label">Skill :</string>
	<string name="view_captured_monster_detail_skill_level_value">%1$d</string>
	<string name="view_captured_friend_leader_level_label">Level :</string>
	<string name="view_captured_friend_leader_level_value">%1$d</string>
	<string name="view_captured_friend_leader_pluses_label">Pluses :</string>
	<string name="view_captured_friend_leader_pluses_value">+%1$d +%2$d +%3$d</string>
	<string name="view_captured_friend_leader_awakenings_label">Awa. :</string>
	<string name="view_captured_friend_leader_awakenings_value">%1$d</string>
	<string name="view_captured_friend_leader_skill_level_label">Skill :</string>
	<string name="view_captured_friend_leader_skill_level_value">%1$d</string>
	<string name="view_captured_friend_leader_last_seen">Last seen : %1$s</string>
	<string name="compute_sync_content">Sync data captured from PAD at %1$s</string>
	<string name="compute_sync_start">Start</string>
	<string name="compute_sync_status">Sync status : %1$s</string>
	<string name="compute_sync_missing_credentials">You haven\'t set your PADHerder credentiels ! You need to set them in the settings before being able to sync.</string>
	<string name="compute_sync_missing_capture">You did not capture any data from PAD, there is nothing to sync !</string>
</resources>