<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings_sync_page">
	<PreferenceCategory android:title="@string/settings_sync_category">
		<ListPreference
			android:defaultValue="ONLY_IF_ALREADY_IN_PADHERDER"
			android:entries="@array/settings_sync_material_in_monster_entries"
			android:entryValues="@array/settings_sync_material_in_monster_entryValues"
			android:key="sync_material_in_monster"
			android:summary="@string/settings_sync_material_in_monster_summary"
			android:title="@string/settings_sync_material_in_monster_title"/>

		<CheckBoxPreference
			android:defaultValue="true"
			android:key="sync_deduct_monster_in_material"
			android:summary="@string/settings_sync_deduct_monster_in_material_summary"
			android:title="@string/settings_sync_deduct_monster_in_material_title"/>

		<ListPreference
			android:defaultValue="MED"
			android:entries="@array/settings_sync_default_monster_create_priority_entries"
			android:entryValues="@array/settings_sync_default_monster_create_priority_entryValues"
			android:key="default_monster_create_priority"
			android:summary="@string/settings_sync_default_monster_create_priority_summary"
			android:title="@string/settings_sync_default_monster_create_priority_title"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_sync_preselect_category">
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="choose_sync_preselect_updated_user_info"
			android:summary="@string/settings_choose_sync_preselect_updated_user_info_summary"
			android:title="@string/settings_choose_sync_preselect_updated_user_info_title"/>
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="choose_sync_preselect_updated_materials"
			android:summary="@string/settings_choose_sync_preselect_updated_materials_summary"
			android:title="@string/settings_choose_sync_preselect_updated_materials_title"/>
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="choose_sync_preselect_updated_monsters"
			android:summary="@string/settings_choose_sync_preselect_updated_monsters_summary"
			android:title="@string/settings_choose_sync_preselect_updated_monsters_title"/>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="choose_sync_preselect_created_monsters"
			android:summary="@string/settings_choose_sync_preselect_created_monsters_summary"
			android:title="@string/settings_choose_sync_preselect_created_monsters_title"/>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="choose_sync_preselect_deleted_monsters"
			android:summary="@string/settings_choose_sync_preselect_deleted_monsters_summary"
			android:title="@string/settings_choose_sync_preselect_deleted_monsters_title"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_sync_preselect_group">
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="choose_sync_group_monsters_updated"
			android:summary="@string/settings_choose_sync_group_monsters_updated_summary"
			android:title="@string/settings_choose_sync_group_monsters_updated_title"/>
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="choose_sync_group_monsters_created"
			android:summary="@string/settings_choose_sync_group_monsters_created_summary"
			android:title="@string/settings_choose_sync_group_monsters_created_title"/>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="choose_sync_group_monsters_deleted"
			android:summary="@string/settings_choose_sync_group_monsters_deleted_summary"
			android:title="@string/settings_choose_sync_group_monsters_deleted_title"/>
	</PreferenceCategory>
</PreferenceScreen>
