<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceScreen android:title="@string/settings_listener_page">
		<PreferenceCategory android:title="@string/settings_listener_category">
			<EditTextPreference
				android:defaultValue="api-na-adr-pad.gungho.jp"
				android:key="listener_target_hostname"
				android:summary="@string/settings_listener_target_hostname_summary"
				android:title="@string/settings_listener_target_hostname_title" />
			<ListPreference
				android:defaultValue="MANUAL"
				android:entries="@array/settings_proxy_mode_entries"
				android:entryValues="@array/settings_proxy_mode_entryValues"
				android:key="listener_proxy_mode"
				android:summary="@string/settings_proxy_mode_summary"
				android:title="@string/settings_proxy_mode_title" />
		</PreferenceCategory>
	</PreferenceScreen>

	<PreferenceScreen android:title="@string/settings_padherder_page">
		<PreferenceCategory android:title="@string/settings_padherder_account_1_category">
			<EditTextPreference
				android:key="padherder_login_1"
				android:summary="@string/settings_padherder_login_summary"
				android:title="@string/settings_padherder_login_title" />
			<EditTextPreference
				android:inputType="textPassword"
				android:key="padherder_password_1"
				android:summary="@string/settings_padherder_password_summary"
				android:title="@string/settings_padherder_password_title" />
		</PreferenceCategory>
		<PreferenceCategory android:title="@string/settings_padherder_account_2_category">
			<EditTextPreference
				android:key="padherder_login_2"
				android:summary="@string/settings_padherder_login_summary"
				android:title="@string/settings_padherder_login_title" />
			<EditTextPreference
				android:inputType="textPassword"
				android:key="padherder_password_2"
				android:summary="@string/settings_padherder_password_summary"
				android:title="@string/settings_padherder_password_title" />
		</PreferenceCategory>
		<PreferenceCategory android:title="@string/settings_padherder_account_3_category">
			<EditTextPreference
				android:key="padherder_login_3"
				android:summary="@string/settings_padherder_login_summary"
				android:title="@string/settings_padherder_login_title" />
			<EditTextPreference
				android:inputType="textPassword"
				android:key="padherder_password_3"
				android:summary="@string/settings_padherder_password_summary"
				android:title="@string/settings_padherder_password_title" />
		</PreferenceCategory>
	</PreferenceScreen>

	<PreferenceScreen android:title="@string/settings_sync_page">
		<PreferenceCategory android:title="@string/settings_sync_category">
			<ListPreference
				android:defaultValue="ONLY_IF_ALREADY_IN_PADHERDER"
				android:entries="@array/settings_sync_material_in_monster_entries"
				android:entryValues="@array/settings_sync_material_in_monster_entryValues"
				android:key="sync_material_in_monster"
				android:summary="@string/settings_sync_material_in_monster_summary"
				android:title="@string/settings_sync_material_in_monster_title" />

			<CheckBoxPreference
				android:defaultValue="true"
				android:key="sync_deduct_monster_in_material"
				android:summary="@string/settings_sync_deduct_monster_in_material_summary"
				android:title="@string/settings_sync_deduct_monster_in_material_title" />
		</PreferenceCategory>

		<PreferenceCategory android:title="@string/settings_sync_preselect_category">
			<CheckBoxPreference
				android:defaultValue="true"
				android:key="choose_sync_preselect_updated_user_info"
				android:summary="@string/settings_choose_sync_preselect_updated_user_info_summary"
				android:title="@string/settings_choose_sync_preselect_updated_user_info_title" />
			<CheckBoxPreference
				android:defaultValue="true"
				android:key="choose_sync_preselect_updated_materials"
				android:summary="@string/settings_choose_sync_preselect_updated_materials_summary"
				android:title="@string/settings_choose_sync_preselect_updated_materials_title" />
			<CheckBoxPreference
				android:defaultValue="true"
				android:key="choose_sync_preselect_updated_monsters"
				android:summary="@string/settings_choose_sync_preselect_updated_monsters_summary"
				android:title="@string/settings_choose_sync_preselect_updated_monsters_title" />
			<CheckBoxPreference
				android:defaultValue="false"
				android:key="choose_sync_preselect_created_monsters"
				android:summary="@string/settings_choose_sync_preselect_created_monsters_summary"
				android:title="@string/settings_choose_sync_preselect_created_monsters_title" />
			<CheckBoxPreference
				android:defaultValue="false"
				android:key="choose_sync_preselect_deleted_monsters"
				android:summary="@string/settings_choose_sync_preselect_deleted_monsters_summary"
				android:title="@string/settings_choose_sync_preselect_deleted_monsters_title" />
		</PreferenceCategory>

		<PreferenceCategory android:title="@string/settings_sync_preselect_group">
			<CheckBoxPreference
				android:defaultValue="false"
				android:key="choose_sync_group_monsters_updated"
				android:summary="@string/settings_choose_sync_group_monsters_updated_summary"
				android:title="@string/settings_choose_sync_group_monsters_updated_title" />
			<CheckBoxPreference
				android:defaultValue="true"
				android:key="choose_sync_group_monsters_created"
				android:summary="@string/settings_choose_sync_group_monsters_created_summary"
				android:title="@string/settings_choose_sync_group_monsters_created_title" />
			<CheckBoxPreference
				android:defaultValue="false"
				android:key="choose_sync_group_monsters_deleted"
				android:summary="@string/settings_choose_sync_group_monsters_deleted_summary"
				android:title="@string/settings_choose_sync_group_monsters_deleted_title" />
		</PreferenceCategory>
	</PreferenceScreen>

</PreferenceScreen>