<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	tools:context=".ui.activity.ViewCapturedDataActivity">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/view_captured_friend_leader_image"
			android:layout_width="70dp"
			android:layout_height="70dp"
			android:src="@drawable/no_monster_image"/>

		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="12dp"
			android:gravity="center">

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_friend_leader_level_label"
					android:textSize="@dimen/text_size_medium"/>

				<TextView
					android:id="@+id/view_captured_friend_leader_level"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_friend_leader_level_value"
					android:textSize="@dimen/text_size_medium"/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_friend_leader_pluses_label"
					android:textSize="@dimen/text_size_medium"/>

				<TextView
					android:id="@+id/view_captured_friend_leader_pluses"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_friend_leader_pluses_value"
					android:textSize="@dimen/text_size_medium"/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_friend_leader_awakenings_label"
					android:textSize="@dimen/text_size_medium"/>

				<TextView
					android:id="@+id/view_captured_friend_leader_awakenings"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_friend_leader_awakenings_value"
					android:textSize="@dimen/text_size_medium"/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_friend_leader_skill_level_label"
					android:textSize="@dimen/text_size_medium"/>

				<TextView
					android:id="@+id/view_captured_friend_leader_skill_level"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_friend_leader_skill_level_value"
					android:textSize="@dimen/text_size_medium"/>
			</TableRow>

		</TableLayout>

	</LinearLayout>

	<TextView
		android:id="@+id/view_captured_friend_leader_last_seen"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="8dp"
		android:gravity="end"
		android:text="@string/view_captured_friend_leader_last_seen"
		android:textSize="@dimen/text_size_medium"/>
</LinearLayout>
