<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		android:orientation="horizontal"
		>

		<ImageView
			android:id="@+id/view_captured_monster_detail_image"
			android:layout_width="112dp"
			android:layout_height="112dp"
			android:src="@drawable/no_monster_image"
			/>

		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginLeft="12dp"
			android:gravity="center"
			>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_monster_detail_level_label"
					android:textSize="@dimen/text_size_large"
					/>

				<TextView
					android:id="@+id/view_captured_monster_detail_level"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_monster_detail_level_value"
					android:textSize="@dimen/text_size_large"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_monster_detail_pluses_label"
					android:textSize="@dimen/text_size_large"
					/>

				<TextView
					android:id="@+id/view_captured_monster_detail_pluses"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_monster_detail_pluses_value"
					android:textSize="@dimen/text_size_large"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_monster_detail_awakenings_label"
					android:textSize="@dimen/text_size_large"
					/>

				<TextView
					android:id="@+id/view_captured_monster_detail_awakenings"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_monster_detail_awakenings_value"
					android:textSize="@dimen/text_size_large"
					/>
			</TableRow>

			<TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="8dp"
					android:gravity="end"
					android:text="@string/view_captured_monster_detail_skill_level_label"
					android:textSize="@dimen/text_size_large"
					/>

				<TextView
					android:id="@+id/view_captured_monster_detail_skill_level"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/view_captured_monster_detail_skill_level_value"
					android:textSize="@dimen/text_size_large"
					/>
			</TableRow>


		</TableLayout>

	</LinearLayout>
</FrameLayout>